@@ -35,6 +35,8 @@ mountall (0.2.2) UNRELEASED; urgency=low
     update the knowledge of the mount table and what's mounted.  That
     way if something else mounts it while mountall running, you'll still
     get events and mountall will still exit.
+  * Try mounts again if another network device comes up while we were
+    waiting.
 
  -- Steve Langasek <steve.langasek@ubuntu.com>  Sun, 11 Oct 2009 23:07:55 -0700
 
